add endpoint and makefile
